add --enable-preview flag to application startup parameters